fixtures/cs-rng-02/good/random-bytes-short-no-auth.ts
import { randomBytes } from "crypto";
export function generateColor() {
	return randomBytes(4).toString("hex");
}
