fixtures/cs-rng-02/bad/member-random-bytes-short.ts
import crypto from "crypto";
export function generateAuthToken() {
	return crypto.randomBytes(4).toString("hex");
}
